Fix wrapping issue in footer

--- a/website/_sass/footer.scss
+++ b/website/_sass/footer.scss
@@ -73,6 +73,13 @@
 }
 
 
+.footer__right {
+  @media only screen and (min-width: 48em) {
+    flex-wrap: nowrap;
+  }
+}
+
+
 .footer__copyright {
   font-family: $sans-serif;
   font-size: 0.9rem;
